fix gap issue

--- a/public/src/scss/pdf-generator-for-wp-public.css
+++ b/public/src/scss/pdf-generator-for-wp-public.css
@@ -47,7 +47,7 @@ a.pgfw-single-pdf-download-button,
     flex-direction: column;
     align-items: center;
     text-align: center;
-    gap: 5px;
+    
     
 }
 
